--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "tinystore",
   "version": "0.0.0",
-  "description": "WIP - nothing to see here",
+  "description": "Tiny, single file, scalable key value store based on HAMTs",
   "main": "index.js",
   "dependencies": {
     "mutexify": "^1.2.0",
+    "random-access-file": "^2.1.3",
+    "sodium-universal": "^2.0.0",
     "thunky": "^1.0.3",
+    "uint64be": "^2.0.2",
     "varint": "^5.0.0"
   },
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/mafintosh/tinystore.git"
+    "url": "https://github.com/hyperdivision/tinystore.git"
   },
   "author": "Mathias Buus (@mafintosh)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mafintosh/tinystore/issues"
+    "url": "https://github.com/hyperdivision/tinystore/issues"
   },
-  "homepage": "https://github.com/mafintosh/tinystore"
+  "homepage": "https://github.com/hyperdivision/tinystore"
 }
