--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "uint64be": "^2.0.2",
     "varint": "^5.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "standard": "^13.0.1"
+  },
+  "scripts": {
+    "test": "standard"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/hyperdivision/tinystore.git"
